# modern_cpp_excercise

./: .gitmodules  CMakeLists.txt  README.md  coverage.info
medium_exe/: CMakeLists.txt
medium_exe/Inc/: BasicHandler.h  CounterHandler.h  Handler.h  HandlerFactory.h  Reactor.h  TimerHandler.h
medium_exe/Src/: main.cpp  main_shared_ptr.cpp
mordern_cpp/: CMakeLists.txt
mordern_cpp/Paramter_Type_Length/: CMakeLists.txt  param_typ_length.cpp
mordern_cpp/SSL_Test/: CMakeLists.txt  main.cc
mordern_cpp/alias_declarations/: CMakeLists.txt  main_alias_declarations.cpp
mordern_cpp/dns_resolve/: CMakeLists.txt  dns_resolve.cc
mordern_cpp/future/: CMakeLists.txt  EventTrigger.cpp
mordern_cpp/initializer_list/: CMakeLists.txt  initializer_list.cc
mordern_cpp/libevent_test/: libevent_test.cpp
mordern_cpp/nocopyable/: CMakeLists.txt  nocopyable.cc
mordern_cpp/reactor/: CMakeLists.txt
mordern_cpp/reactor/include/: Acceptor.hh  Epoller.hh  Handler.hh  HandlerContainer.hh  MessageParser.hh  Reactor.hh  ReadHandler.hh  Server.hh  WriteHandler.hh
mordern_cpp/reactor/include/TLS/: SSLConnect.h
mordern_cpp/reactor/include/processor/: HttpProcessor.hh  Processor.hh
mordern_cpp/reactor/src/: Acceptor.cc  Epoller.cc  Handler.cc  MessageParser.cc  Reactor.cc  Server.cc  main_client.cc  main_server.cc  main_server_simple.cc
mordern_cpp/reactor/src/processor/: HttpProcessor.cc
mordern_cpp/reactor/uml/: Acceptor.plantuml  Epoller.plantuml  Handler.plantuml  Reactor.plantuml  Sequence_diagram.plantuml
mordern_cpp/reactor/utility/openstreetmap/html/: index.html
mordern_cpp/reactor/utility/openstreetmap/py/: extract_png.py  tile_pmg.py
mordern_cpp/reactor/utility/openstreetmap/src/: download_osm.cc  mapnik_exam.cc  parse_osm.cc
mordern_cpp/rvalue/: CMakeLists.txt  conclusion.txt  rvalue_exce.cpp
mordern_cpp/singleton/: CMakeLists.txt  singleton.cc
mordern_cpp/smart_pointer/: CMakeLists.txt
mordern_cpp/smart_pointer/shared_ptr/: CMakeLists.txt  Widget.hh  main_shared_ptr.cpp  test_main_shared_ptr.cpp
mordern_cpp/smart_pointer/unique_ptr/: CMakeLists.txt  main_unique_ptr.cpp
mordern_cpp/template/: CMakeLists.txt  crtp_static_polymorphism.cc  temp_iterate.cc  temp_iterate_arg_temp.cc  temp_test.cc  template_quick_sort.cc  template_serialize.cc  template_special_class.cc
