add_subdirectory(alias_declarations)
add_subdirectory(Paramter_Type_Length)
add_subdirectory(smart_pointer)
add_subdirectory(future)
add_subdirectory(reactor)
add_subdirectory(rvalue)
add_subdirectory(template)
add_subdirectory(dns_resolve)
add_subdirectory(SSL_Test)
add_subdirectory(singleton)
add_subdirectory(initializer_list)
add_subdirectory(nocopyable)